fix: footer links underline alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7997,4 +7997,8 @@ li {
   padding-top: 5rem;
 }
 
+.page-changer .c-foot__nav li {
+  margin-bottom: 0.3125rem;
+}
+
 /*# sourceMappingURL=style.css.map */
