--- a/assets/scss/_page-changer.scss
+++ b/assets/scss/_page-changer.scss
@@ -16,4 +16,8 @@
       @extend .container-main--1020;
     }
   }
+
+  .c-foot__nav li {
+    margin-bottom: rem-size(5px);
+  }
 }
